examples/inProgress/C/tests/shouldFail/twoGlobalStatics.c
static int x = 5;
static int x = 7;
int main(void){
	return 0;
}
